--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,5 @@
 mkdocs[i18n]==1.5.*
-
+mkdocs-material[imaging]==9.*
+mkdocs-git-revision-date-localized-plugin==1.2.*
+mkdocs-static-i18n[material]==1.2.*
+mkdocs-awesome-pages-plugin==2.9.*
