--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,9 +16,10 @@ theme:
     - navigation.tabs
     - navigation.prune
     - navigation.path
+    - navigation.indexes
+    - navigation.footer
     - toc.follow
     - search.highlight
-    - navigation.footer
   font:
     text: Open Sans
   palette:
@@ -61,6 +62,7 @@ markdown_extensions:
 plugins:
   - search
   - privacy
+  - glightbox
   - social:
       cards_layout_options:
         background_color: "#3B1C4A"
@@ -73,10 +75,17 @@ plugins:
           default: true
           name: English
           build: true
+          nav_translations:
+            User guide: User Guide
         - locale: de
           name: Deutsch
           build: true
           site_name: "pretix Dokumentation"
+          nav_translations:
+            User guide: Handbuch
+            Organizers: Veranstalter
+            Events: Veranstaltungen
+            Payment: Zahlung
   - git-revision-date-localized
   - awesome-pages
 extra:
