--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,5 @@ mkdocs-glightbox
 mkdocs-git-revision-date-localized-plugin==1.2.*
 mkdocs-static-i18n[material]==1.2.*
 mkdocs-awesome-pages-plugin==2.9.*
+mkdocs-macros-plugin==1.0.*
+
