--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -103,3 +103,5 @@ extra:
       link: https://www.youtube.com/channel/UCG1Og1YUpgIJD4geAZLAp5g
     - icon: fontawesome/brands/instagram
       link: https://www.instagram.com/pretix.eu/
+hooks:
+- overrides/hooks/shortcodes.py
