Add tooltips for the "badges"

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,6 +21,7 @@ theme:
     - navigation.footer
     - toc.follow
     - search.highlight
+    - content.tooltips
   font:
     text: Open Sans
   palette:
