--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -85,6 +85,7 @@ plugins:
           build: true
           nav_translations:
             User guide: User Guide
+            Developer and API Docs: Developer and API docs
         - locale: de
           name: Deutsch
           build: true
@@ -94,6 +95,7 @@ plugins:
             Organizers: Veranstalter
             Events: Veranstaltungen
             Payment: Zahlung
+            Developer and API Docs: Entwickler- und API-Dokumentation
           admonition_translations:
             note: Hinweis
             Note: Hinweis
