--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -86,6 +86,7 @@ plugins:
           build: true
           nav_translations:
             User guide: User Guide
+            Trust: Trust & Compliance
             Self hosting: Self-hosting
         - locale: de
           name: Deutsch
@@ -96,6 +97,7 @@ plugins:
             Organizers: Veranstalter
             Events: Veranstaltungen
             Payment: Zahlung
+            Trust: Trust & Compliance
             Self hosting: Self-Hosting
           admonition_translations:
             note: Hinweis
