--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -86,6 +86,7 @@ plugins:
           build: true
           nav_translations:
             User guide: User Guide
+            Developer and API Docs: Developer and API docs
             Trust: Trust & Compliance
             Self hosting: Self-hosting
         - locale: de
@@ -97,6 +98,7 @@ plugins:
             Organizers: Veranstalter
             Events: Veranstaltungen
             Payment: Zahlung
+            Developer and API Docs: Entwickler- und API-Dokumentation
             Trust: Trust & Compliance
             Self hosting: Self-Hosting
           admonition_translations:
