--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -68,7 +68,10 @@ markdown_extensions:
 plugins:
   - search
   - privacy
-  - awesome-pages
+  - awesome-pages:
+      order: asc
+      sort_type: natural
+      order_by: title
   - glightbox
   - macros:
       include_dir: include
