Fix alphabetical page order to mix folders with pages (#66)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,7 +72,10 @@ markdown_extensions:
 plugins:
   - search
   - privacy
-  - awesome-pages
+  - awesome-pages:
+      order: asc
+      sort_type: natural
+      order_by: title
   - glightbox
   - macros:
       include_dir: include
