--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -63,6 +63,7 @@ markdown_extensions:
   - pymdownx.superfences
   - def_list
   - attr_list
+  - md_in_html
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
