--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,7 @@ theme:
   name: material
   custom_dir: overrides
   logo: assets/logo-light-angled-icon.svg
+  favicon: assets/favicon.png
   features:
     - navigation.tabs
     - navigation.prune
