--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -75,7 +75,7 @@ markdown_extensions:
 plugins:
   - search
   - privacy
-  - awesome-pages:
+  - awesome-nav:
       order: asc
       sort_type: natural
       order_by: title
