--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ mkdocs-material[imaging]==9.*
 mkdocs-glightbox
 mkdocs-git-revision-date-localized-plugin==1.2.*
 mkdocs-static-i18n[material]==1.2.*
-mkdocs-awesome-pages-plugin==2.9.*
+mkdocs-awesome-nav==3.*
 mkdocs-macros-plugin==1.0.*
