ignore files not in nav

--- a/docs/.nav.yml
+++ b/docs/.nav.yml
@@ -12,5 +12,5 @@ nav:
  - Developer and API Docs: https://docs.pretix.eu/dev/
  - trust
 
-not_in_nav: 
- - old-link.md
+not_in_nav: |
+ /old-link.md
