--- a/docs/.nav.yml
+++ b/docs/.nav.yml
@@ -4,14 +4,7 @@ sort:
   ignore_case: true
   type: natural
 
-not_in_nav: |
- - old-link.md
-
-exclude_docs: |
- old-link.md
-
-hidden: 
- - old-link.md
+ignore: old-link.md
 
 nav:
  - index*.md
