Use awesome-nav instead of awesome-pages (#75)
* update and migrate awesome-pages to awesome-nav; delete .nav or rename to .nav.yml as needed; fix alphabetical sorting issue

* implement workaround as described in https://github.com/lukasgeiter/mkdocs-awesome-nav/issues/120#issuecomment-2683378332

* add .nav.yml and .nav.de.yml files in most directories; mkdocs.yml: remove most nav-translations

* requirements.txt: replace mkdocs-awesome-pages-plugin with mkdocs-awesome-nav

* requirements.txt: update mkdocs to 1.6

* mkdocs.yml: remove invalid config options

* fix broken link

* update navigation files in root directory

* ignore files not in nav

* ignore files not in nav

* ignore files not in nav

* ignore files not in nav

* ignore files not in nav

* ignore files not in nav

* update requirements

* ignore files not in nav

* ignore files not in nav

* ignore files not in nav

* one more try

* one more try

* mkdocs.yml: set behavior for omitted files to "info"

* check whether using a wildcard in nav: fixes the problem

* check whether using a wildcard in nav: fixes the problem

* check whether using a wildcard in nav: fixes the problem

* check whether using a wildcard in nav: fixes the problem

* check whether using a wildcard in nav: fixes the problem

* it doesn't.

* Post-rebase changes

---------

Co-authored-by: Raphael Michel <michel@rami.io>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,7 +9,7 @@ copyright: |
   <a href="https://pretix.eu/about/en/privacy" target="_blank">Privacy policy</a> ·
   Licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY-SA 4.0</a>
 validation:
-  omitted_files: warn
+  omitted_files: info
   absolute_links: warn
   unrecognized_links: warn
 extra_css:
@@ -75,10 +75,7 @@ markdown_extensions:
 plugins:
   - search
   - privacy
-  - awesome-pages:
-      order: asc
-      sort_type: natural
-      order_by: title
+  - awesome-nav
   - glightbox
   - macros:
       include_dir: include
@@ -97,13 +94,8 @@ plugins:
             <a href="https://pretix.eu/about/de/privacy" target="_blank">Datenschutz</a> ·
             Lizensiert unter <a href="https://creativecommons.org/licenses/by-sa/4.0/deed.de" target="_blank">CC BY-SA 4.0</a>
           nav_translations:
-            User guide: Handbuch
             Organizers: Veranstalter
             Events: Veranstaltungen
-            Payment: Zahlung
-            Developer and API Docs: Entwickler- und API-Dokumentation
-            Trust: Trust und Compliance
-            Self hosting: Self-Hosting
           admonition_translations:
             note: Hinweis
             Note: Hinweis
