--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-mkdocs[i18n]==1.5.*
+mkdocs[i18n]==1.6.*
 mkdocs-material[imaging]==9.*
 mkdocs-glightbox
-mkdocs-git-revision-date-localized-plugin==1.2.*
-mkdocs-static-i18n[material]==1.2.*
-mkdocs-awesome-pages-plugin==2.9.*
-mkdocs-macros-plugin==1.0.*
+mkdocs-git-revision-date-localized-plugin==1.4.*
+mkdocs-static-i18n[material]==1.3.*
+mkdocs-awesome-nav==3.*
+mkdocs-macros-plugin==1.3.*
